dataset1235/2025-2/610742602/users/1972734523/executions/677928262_3921830315.log
== RUN (2025-08-28 21:46:47)
-- CODE: 
valor=float(input("Quantidade de litros de gasolina abastecido:"))

litro=2.86
oleo=50.00
icms=34/100

gasolina=valor*litro
servico=gasolina+oleo
total=servico*(1+icms)

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantidade de litros de gasolina abastecido:106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantidade de litros de gasolina abastecido:634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantidade de litros de gasolina abastecido:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantidade de litros de gasolina abastecido:401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantidade de litros de gasolina abastecido:979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantidade de litros de gasolina abastecido:230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:46:56)
-- CODE: 
valor=float(input("Quantidade de litros de gasolina abastecido:"))

litro=2.86
oleo=50.00
icms=34/100

gasolina=valor*litro
servico=gasolina+oleo
total=servico*(1+icms)

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantidade de litros de gasolina abastecido:106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantidade de litros de gasolina abastecido:634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantidade de litros de gasolina abastecido:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantidade de litros de gasolina abastecido:401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantidade de litros de gasolina abastecido:979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantidade de litros de gasolina abastecido:230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:46:42)
-- CODE: 
valor=float(input("Quantidade de litros de gasolina abastecido:"))

litro=2.86
oleo=50.00
icms=34/100

gasolina=valor*litro
servico=gasolina+oleo
total=servico*(1+icms)

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantidade de litros de gasolina abastecido:106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantidade de litros de gasolina abastecido:634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantidade de litros de gasolina abastecido:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantidade de litros de gasolina abastecido:401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantidade de litros de gasolina abastecido:979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantidade de litros de gasolina abastecido:230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:46:26)
-- CODE: 
valor=float(input("Quantidade de litros de gasolina abastecido:"))

litro=2.86
oleo=50.00
icms=34/100

gasolina=valor*litro
servico=gasolina+oleototal=servico*(1+icms)

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 8
    servico=gasolina+oleototal=servico*(1+icms)
            ^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 8
    servico=gasolina+oleototal=servico*(1+icms)
            ^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 8
    servico=gasolina+oleototal=servico*(1+icms)
            ^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 8
    servico=gasolina+oleototal=servico*(1+icms)
            ^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 8
    servico=gasolina+oleototal=servico*(1+icms)
            ^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 8
    servico=gasolina+oleototal=servico*(1+icms)
            ^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
